--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 VITE_BASE_URL=/
 
-VITE_APP_NAME=SoybeanAdmin
+VITE_APP_NAME=有米塔
 
-VITE_APP_TITLE=Soybean管理系统
+VITE_APP_TITLE=有米塔
 
-VITE_APP_DESC=SoybeanAdmin是一个中后台管理系统模版
+VITE_APP_DESC=拓客管理
 
 # 权限路由模式: static ｜ dynamic
 VITE_AUTH_ROUTE_MODE=dynamic
