--- a/.env
+++ b/.env
@@ -9,4 +9,6 @@ VITE_APP_DESC=拓客管理
 # 权限路由模式: static ｜ dynamic
 VITE_AUTH_ROUTE_MODE=dynamic
 
-VITE_ROUTE_HOME_PATH=/dashboard/analysis
+# VITE_ROUTE_HOME_PATH=/dashboard/analysis
+
+VITE_ROUTE_HOME_PATH=/document
